<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_billing" android:icon="@drawable/ic_bill" android:title="@string/nav_sale" />
        <item android:id="@+id/nav_dashboard" android:icon="@drawable/ic_dashboard" android:title="@string/nav_home" />
        <item android:id="@+id/nav_products" android:icon="@drawable/ic_products" android:title="@string/nav_items" />
        <item android:id="@+id/nav_history" android:icon="@drawable/ic_history" android:title="@string/nav_bills" />
        <item android:id="@+id/nav_reports" android:icon="@drawable/ic_reports" android:title="@string/nav_reports" />
    </group>

    <item android:title="@string/nav_group_business">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_printer" android:icon="@drawable/ic_print" android:title="@string/nav_printer" />
                <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings" android:title="@string/nav_settings" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_group_account">
        <menu>
            <item android:id="@+id/nav_notifications" android:icon="@drawable/ic_bell" android:title="@string/nav_notifications" />
            <item android:id="@+id/nav_plans" android:icon="@drawable/ic_plans" android:title="@string/nav_plans" />
            <item android:id="@+id/nav_contact" android:icon="@drawable/ic_support" android:title="@string/nav_contact" />
            <item android:id="@+id/nav_logout" android:icon="@drawable/ic_logout" android:title="@string/nav_logout" />

        </menu>
    </item>
</menu>
