<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/action_notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/action_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_moon"
        android:title="@string/action_dark_mode"
        app:showAsAction="always" />
</menu>
